# gitlab-settings-automation

./: CLAUDE.md  Makefile  README.md  gl_settings.py  pyproject.toml
.github/workflows/: ci.yml  integration.yml
Docs/: implementation-plan.md
examples/: release-lockdown.sh
gl_settings/: __init__.py  cli.py  client.py  logging_utils.py  models.py
gl_settings/operations/: __init__.py  approval_rule.py  base.py  init_project.py  kahuna_sandbox.py  merge_request_setting.py  project_setting.py  protect_branch.py  protect_tag.py  push_rule.py
gl_settings/templates/: __init__.py  docs.md  feature.md
issue-templates/: bug.md  chore.md
scripts/: init-project.sh
tests/: __init__.py  conftest.py  test_dry_run.py  test_idempotency.py  test_kahuna_sandbox.py  test_push_rule.py  test_recurse.py  test_retry.py  test_url_parsing.py
tests/integration/: lib.sh  prime.sh  run-all.sh  test-approval-rule.sh  test-error-handling.sh  test-init-project.sh  test-merge-request-setting.sh  test-plan.md  test-project-setting.sh  test-protect-branch.sh  test-protect-tag.sh  test-recursion.sh
