[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-settings"
version = "0.1.0"
description = "A composable CLI tool for applying settings to GitLab groups and projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["gitlab", "automation", "cli", "devops"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
]

[project.scripts]
gl-settings = "gl_settings:main"

[project.urls]
Homepage = "https://github.com/bakeb7j0/gitlab-settings-automation"
Repository = "https://github.com/bakeb7j0/gitlab-settings-automation"
Issues = "https://github.com/bakeb7j0/gitlab-settings-automation/issues"

[tool.setuptools.packages.find]
include = ["gl_settings*"]

[tool.setuptools.package-data]
"gl_settings.templates" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "E402"]  # E402: module-level imports not at top (needed for test path setup)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
